change profile photo and add css to crop and reposition

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
-        <img class="img-fluid mb-5 d-block mx-auto profile" src="img/Brillante_Wang_app_academy_headshot.jpg" alt="">
+        <div class="img-fluid mb-5 d-block mx-auto profile-container"><img class="profile" src="img/Brillante_Wang_app_academy_headshot.jpg" alt=""></div>
         <h1 class="text-uppercase mb-0">Brillante Wang</h1>
         <hr class="star-light">
-        <h2 class="font-weight-light mb-0">Web Developer</h2>
+        <h2 class="font-weight-light mb-0">Software Developer</h2>
       </div>
     </header>
 
