--- a/index.html
+++ b/index.html
@@ -135,21 +135,24 @@
     <!-- About Section -->
     <section class="bg-primary text-white mb-0" id="about">
       <div class="container">
-        <h2 class="text-center text-uppercase text-white">About</h2>
+        <h2 class="text-center text-uppercase text-white">About Me</h2>
         <hr class="star-light mb-5">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+            <p class="lead">After moving to SF to work in sales, I became increasingly drawn to coding. I wanted to build the stuff I was selling. I learned my company's proprietary language and started making pull requests. I was hooked.</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+            <p class="lead">I've been spending the past six months honing my skills in React/Redux and Ruby on Rails. I am now a software developer intern/instructor at App Academy so I can introduce others to this amazing world.</p>
           </div>
         </div>
         <div class="text-center mt-4">
-          <a class="btn btn-xl btn-outline-light" href="#">
+          <!-- <p class="lead">
+            Every day I continue to grow my programming ability with the goal of making a meaningful impact on the lives of others.
+          </p> -->
+          <!-- <a class="btn btn-xl btn-outline-light" href="#">
             <i class="fa fa-download mr-2"></i>
             Download Now!
-          </a>
+          </a> -->
         </div>
       </div>
     </section>
