--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/cake.png" alt="">
+              <img class="img-fluid" src="img/portfolio/safe.png" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -95,10 +95,10 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/circus.png" alt="">
+              <img class="img-fluid" src="img/portfolio/game.png" alt="">
             </a>
           </div>
-          <div class="col-md-6 col-lg-4">
+          <!-- <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-4">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                 <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
@@ -129,7 +129,7 @@
             </a>
           </div>
         </div>
-      </div>
+      </div> -->
     </section>
 
     <!-- About Section -->
@@ -142,7 +142,7 @@
             <p class="lead">After moving to SF to work in sales, I became increasingly drawn to coding. I wanted to build the stuff I was selling. I learned my company's proprietary language and started making pull requests. I was hooked.</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">I've been spending the past six months honing my skills in React/Redux and Ruby on Rails. I am now a software developer intern/instructor at App Academy so I can introduce others to this amazing world.</p>
+            <p class="lead">I've been spending the past six months honing my skills in React/Redux and Ruby on Rails. I am now a software developer intern/instructor at App Academy so I can introduce others to this lovely world.</p>
           </div>
         </div>
         <div class="text-center mt-4">
@@ -278,13 +278,15 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">TaskWombat</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/cabin.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+              <a target="_blank" href="https://taskwombat.herokuapp.com/">
+                <img class="img-fluid mb-5" src="img/portfolio/cabin.png" alt="TaskWombat">
+              </a>
+              <p class="mb-5">I've always admired TaskRabbit for its simplicity and minimalist style, so I built a clone called <a target="_blank" href="https://taskwombat.herokuapp.com/">TaskWombat</a> as my first fullstack project ever. No bootstrap, all original CSS. All taskers are fake, so don't expect someone to actually show up at your house if you book one!</br></br>Built on Ruby on Rails and React/Redux.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
-                Close Project</a>
+                Close</a>
             </div>
           </div>
         </div>
@@ -300,13 +302,15 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">TeacherPay</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/cake.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+              <a target="_blank" href="https://brillantewang.github.io/teacherpay/">
+                <img class="img-fluid mb-5" src="img/portfolio/safe.png" alt="TeacherPay">
+              </a>
+              <p class="mb-5">As a former math teacher, I heard that countries that paid their teachers more also had better educational outcomes. Was this true? Does this mean we should pay teachers more? To find out, I organized data from the OECD and built <a target="_blank" href="https://brillantewang.github.io/teacherpay/">TeacherPay</a>, a visual analysis of teacher salary to student outcomes across the world.</br></br>Built on vanilla JavaScript and D3.js.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
-                Close Project</a>
+                Close</a>
             </div>
           </div>
         </div>
@@ -322,13 +326,13 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Show Me Your Moves</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/portfolio/circus.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+              <a href="https://francislara.github.io/ShowMeYourMoves/" target="_blank"><img class="img-fluid mb-5" src="img/portfolio/game.png" alt=""></a>
+              <p class="mb-5">I've played Super Smash Bros ever since I was a kid. A couple friends and I decided to build a mobile app that lets people meet nearby Smash players. We decided not to release the app because it turns out there's another one out there that's really similar, but you can still check out our <a href="https://francislara.github.io/ShowMeYourMoves/" target="_blank">demo page</a>.</br></br>Built on React Native and Ruby on Rails.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
-                Close Project</a>
+                Close</a>
             </div>
           </div>
         </div>
