fixed portfolio image class to resize and removed empty div in about me

--- a/index.html
+++ b/index.html
@@ -145,15 +145,15 @@
             <p class="lead">I've been spending the past six months honing my skills in React/Redux and Ruby on Rails. I am now a software developer intern/instructor at App Academy so I can introduce others to this lovely world.</p>
           </div>
         </div>
-        <div class="text-center mt-4">
-          <!-- <p class="lead">
+        <!-- <div class="text-center mt-4">
+          <p class="lead">
             Every day I continue to grow my programming ability with the goal of making a meaningful impact on the lives of others.
-          </p> -->
-          <!-- <a class="btn btn-xl btn-outline-light" href="#">
+          </p>
+          <a class="btn btn-xl btn-outline-light" href="#">
             <i class="fa fa-download mr-2"></i>
             Download Now!
-          </a> -->
-        </div>
+          </a>
+        </div> -->
       </div>
     </section>
 
@@ -329,7 +329,7 @@
               <h2 class="text-secondary text-uppercase mb-0">Show Me Your Moves</h2>
               <hr class="star-dark mb-5">
               <a href="https://francislara.github.io/ShowMeYourMoves/" target="_blank"><img class="img-fluid mb-5" src="img/portfolio/game.png" alt=""></a>
-              <p class="mb-5">I've played Super Smash Bros ever since I was a kid. A couple friends and I decided to build a mobile app that lets people meet nearby Smash players. We decided not to release the app because it turns out there's another one out there that's really similar, but you can still check out our <a href="https://francislara.github.io/ShowMeYourMoves/" target="_blank">demo page</a>.</br></br>Built on React Native and Ruby on Rails.</p>
+              <p class="mb-5">I've played Super Smash Bros ever since I was a kid. A couple friends and I built a mobile app that lets you meet nearby players. We decided not to release it because it turns out there's another one out there that's really similar, but we still have a pretty sweet <a href="https://francislara.github.io/ShowMeYourMoves/" target="_blank">demo page</a>.</br></br>Built on React Native and Ruby on Rails.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
