--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
         <div class="row">
           <div class="col-md-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Location</h4>
-            <p class="lead mb-0">2215 John Daniel Drive
-              <br>Clark, MO 65243</p>
+            <p class="lead mb-0">571 Teresita Blvd
+              <br>San Francisco, CA 94127</p>
           </div>
           <div class="col-md-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Around the Web</h4>
@@ -223,7 +223,7 @@
                   <i class="fa fa-fw fa-facebook"></i>
                 </a>
               </li>
-              <li class="list-inline-item">
+              <!-- <li class="list-inline-item">
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
                   <i class="fa fa-fw fa-google-plus"></i>
                 </a>
@@ -232,7 +232,7 @@
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
                   <i class="fa fa-fw fa-twitter"></i>
                 </a>
-              </li>
+              </li> -->
               <li class="list-inline-item">
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
                   <i class="fa fa-fw fa-linkedin"></i>
@@ -240,7 +240,7 @@
               </li>
               <li class="list-inline-item">
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fa fa-fw fa-dribbble"></i>
+                  <i class="fa fa-fw fa-github"></i>
                 </a>
               </li>
             </ul>
@@ -256,7 +256,7 @@
 
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>Copyright &copy; Your Website 2018</small>
+        <small>Copyright &copy; Brillante Wang 2018</small>
       </div>
     </div>
 
