edit about me to be more concise

--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
         <hr class="star-light mb-5">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">After moving to SF to work in sales, I became increasingly drawn to coding. I wanted to build the stuff I was selling. I learned my company's proprietary language and started making pull requests. I was hooked.</p>
+            <p class="lead">After moving to SF to work in sales, I became increasingly drawn to coding. I learned my company's proprietary language and started making pull requests. I was hooked.</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">I've been spending the past six months honing my skills in React/Redux and Ruby on Rails. I am now a software developer intern/instructor at App Academy so I can introduce others to this lovely world.</p>
+            <p class="lead">I've spent the past six months honing my skills in React/Redux and Ruby on Rails. I'm now a software developer intern and instructor at App Academy so I can introduce others to this lovely world.</p>
           </div>
         </div>
         <!-- <div class="text-center mt-4">
@@ -211,15 +211,15 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4 mb-5 mb-lg-0">
-            <h4 class="text-uppercase mb-4">Location</h4>
+            <!-- <h4 class="text-uppercase mb-4">Location</h4>
             <p class="lead mb-0">571 Teresita Blvd
-              <br>San Francisco, CA 94127</p>
+              <br>San Francisco, CA 94127</p> -->
           </div>
           <div class="col-md-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Around the Web</h4>
             <ul class="list-inline mb-0">
               <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                <a target="_blank" class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.facebook.com/brillante.wang">
                   <i class="fa fa-fw fa-facebook"></i>
                 </a>
               </li>
@@ -234,21 +234,21 @@
                 </a>
               </li> -->
               <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                <a target="_blank" class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.linkedin.com/in/brillantewang/">
                   <i class="fa fa-fw fa-linkedin"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                <a target="_blank" class="btn btn-outline-light btn-social text-center rounded-circle" href="https://github.com/brillantewang/">
                   <i class="fa fa-fw fa-github"></i>
                 </a>
               </li>
             </ul>
           </div>
           <div class="col-md-4">
-            <h4 class="text-uppercase mb-4">About Freelancer</h4>
+            <!-- <h4 class="text-uppercase mb-4">About Freelancer</h4>
             <p class="lead mb-0">Freelance is a free to use, open source Bootstrap theme created by
-              <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+              <a href="http://startbootstrap.com">Start Bootstrap</a>.</p> -->
           </div>
         </div>
       </div>
@@ -283,7 +283,7 @@
               <a target="_blank" href="https://taskwombat.herokuapp.com/">
                 <img class="img-fluid mb-5" src="img/portfolio/cabin.png" alt="TaskWombat">
               </a>
-              <p class="mb-5">I've always admired TaskRabbit for its simplicity and minimalist style, so I built a clone called <a target="_blank" href="https://taskwombat.herokuapp.com/">TaskWombat</a> as my first fullstack project ever. No bootstrap, all original CSS. All taskers are fake, so don't expect someone to actually show up at your house if you book one!</br></br>Built on Ruby on Rails and React/Redux.</p>
+              <p class="mb-5">I've always admired TaskRabbit for its simplicity and minimalist style. I built a clone called <a target="_blank" href="https://taskwombat.herokuapp.com/">TaskWombat</a> as my first fullstack project ever. No bootstrap, all original CSS. All taskers are fake, so don't expect someone to actually show up at your house if you book one!</br></br>Built on Ruby on Rails and React/Redux.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
@@ -307,7 +307,7 @@
               <a target="_blank" href="https://brillantewang.github.io/teacherpay/">
                 <img class="img-fluid mb-5" src="img/portfolio/safe.png" alt="TeacherPay">
               </a>
-              <p class="mb-5">As a former math teacher, I heard that countries that paid their teachers more also had better educational outcomes. Was this true? Does this mean we should pay teachers more? To find out, I organized data from the OECD and built <a target="_blank" href="https://brillantewang.github.io/teacherpay/">TeacherPay</a>, a visual analysis of teacher salary to student outcomes across the world.</br></br>Built on vanilla JavaScript and D3.js.</p>
+              <p class="mb-5">Back when I was a math teacher, I heard that countries that paid their teachers more had better education systems. Was this true? Does this mean we should pay teachers more? To find out, I built <a target="_blank" href="https://brillantewang.github.io/teacherpay/">TeacherPay</a>, an interactive analysis of teacher salary to student outcomes across the world.</br></br>Built on vanilla JavaScript and D3.js.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
@@ -329,7 +329,7 @@
               <h2 class="text-secondary text-uppercase mb-0">Show Me Your Moves</h2>
               <hr class="star-dark mb-5">
               <a href="https://francislara.github.io/ShowMeYourMoves/" target="_blank"><img class="img-fluid mb-5" src="img/portfolio/game.png" alt=""></a>
-              <p class="mb-5">I've played Super Smash Bros ever since I was a kid. A couple friends and I built a mobile app that lets you meet nearby players. We decided not to release it because it turns out there's another one out there that's really similar, but we still have a pretty sweet <a href="https://francislara.github.io/ShowMeYourMoves/" target="_blank">demo page</a>.</br></br>Built on React Native and Ruby on Rails.</p>
+              <p class="mb-5">I've played Super Smash Bros ever since it came out on N64. Out of our love for the game, a couple friends and I built a mobile app that lets you find nearby players. We're not releasing it since we found another app out there that's really similar, but you can still check out our sweet <a href="https://francislara.github.io/ShowMeYourMoves/" target="_blank">demo page</a>.</br></br>Built on React Native and Ruby on Rails.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
