change css of img-fluid and also include img-fluid-large css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Brillante Wang</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -75,7 +75,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
+              <img class="img-fluid" src="img/taskwombat_screen.png" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -85,7 +85,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/safe.png" alt="">
+              <img class="img-fluid" src="img/teacherpay_thumb.png" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -95,7 +95,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/game.png" alt="">
+              <img class="img-fluid" src="img/showmeyourmoves_thumb.png" alt="">
             </a>
           </div>
           <!-- <div class="col-md-6 col-lg-4">
@@ -281,7 +281,7 @@
               <h2 class="text-secondary text-uppercase mb-0">TaskWombat</h2>
               <hr class="star-dark mb-5">
               <a target="_blank" href="https://taskwombat.herokuapp.com/">
-                <img class="img-fluid mb-5" src="img/portfolio/cabin.png" alt="TaskWombat">
+                <img class="img-fluid-large mb-5" src="img/taskwombat_screen.png" alt="TaskWombat">
               </a>
               <p class="mb-5">I've always admired TaskRabbit for its simplicity and minimalist style. I built a clone called <a target="_blank" href="https://taskwombat.herokuapp.com/">TaskWombat</a> as my first fullstack project ever. No bootstrap, all original CSS. All taskers are fake, so don't expect someone to actually show up at your house if you book one!</br></br>Built on Ruby on Rails and React/Redux.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
@@ -305,7 +305,7 @@
               <h2 class="text-secondary text-uppercase mb-0">TeacherPay</h2>
               <hr class="star-dark mb-5">
               <a target="_blank" href="https://brillantewang.github.io/teacherpay/">
-                <img class="img-fluid mb-5" src="img/portfolio/safe.png" alt="TeacherPay">
+                <img class="img-fluid-large mb-5" src="img/teacherpay_screen.png" alt="TeacherPay">
               </a>
               <p class="mb-5">Back when I was a math teacher, I heard that countries that paid their teachers more had better education systems. Was this true? Does this mean we should pay teachers more? To find out, I built <a target="_blank" href="https://brillantewang.github.io/teacherpay/">TeacherPay</a>, an interactive analysis of teacher salary to student outcomes across the world.</br></br>Built on vanilla JavaScript and D3.js.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
@@ -328,7 +328,7 @@
             <div class="col-lg-8 mx-auto">
               <h2 class="text-secondary text-uppercase mb-0">Show Me Your Moves</h2>
               <hr class="star-dark mb-5">
-              <a href="https://francislara.github.io/ShowMeYourMoves/" target="_blank"><img class="img-fluid mb-5" src="img/portfolio/game.png" alt=""></a>
+              <a href="https://francislara.github.io/ShowMeYourMoves/" target="_blank"><img class="img-fluid-large mb-5" src="img/showmeyourmoves_screen2.png" alt=""></a>
               <p class="mb-5">I've played Super Smash Bros ever since it came out on N64. Out of our love for the game, a couple friends and I built a mobile app that lets you find nearby players. We're not releasing it since we found another app out there that's really similar, but you can still check out our sweet <a href="https://francislara.github.io/ShowMeYourMoves/" target="_blank">demo page</a>.</br></br>Built on React Native and Ruby on Rails.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
