make object-fit: cover for image fluid to preserve aspect ratio when window resizes

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <p class="lead">After moving to SF to work in sales, I became increasingly drawn to coding. I learned my company's proprietary language and started making pull requests. I was hooked.</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">I've spent the past six months honing my skills in React/Redux and Ruby on Rails. I'm now a software developer intern and instructor at App Academy so I can introduce others to this lovely world.</p>
+            <p class="lead">I've spent the past six months honing my skills in React/Redux and Ruby on Rails. I'm now a software developer intern and instructor at App Academy so I can introduce others to this awesome world.</p>
           </div>
         </div>
         <!-- <div class="text-center mt-4">
