--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <p class="lead">After moving to SF to work in sales, I became increasingly drawn to coding. I learned my company's proprietary language and started making pull requests. I was hooked.</p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">I've spent the past six months honing my skills in React/Redux and Ruby on Rails. I'm now a software developer intern and instructor at App Academy so I can introduce others to this awesome world.</p>
+            <p class="lead">I've spent the past six months honing skills like <strong>React/Redux</strong> and <strong>Ruby on Rails</strong>. I'm now a software developer intern/instructor at App Academy where I can introduce others to this amazing world.</p>
           </div>
         </div>
         <!-- <div class="text-center mt-4">
@@ -283,7 +283,7 @@
               <a target="_blank" href="https://taskwombat.herokuapp.com/">
                 <img class="img-fluid-large mb-5" src="img/taskwombat_screen.png" alt="TaskWombat">
               </a>
-              <p class="mb-5">I've always admired TaskRabbit for its simplicity and minimalist style. I built a clone called <a target="_blank" href="https://taskwombat.herokuapp.com/">TaskWombat</a> as my first fullstack project ever. No bootstrap, all original CSS. All taskers are fake, so don't expect someone to actually show up at your house if you book one!</br></br>Built on Ruby on Rails and React/Redux.</p>
+              <p class="mb-5">I admire TaskRabbit for its simplicity and minimalist style. I built a clone called <a target="_blank" href="https://taskwombat.herokuapp.com/">TaskWombat</a> as my first fullstack project ever. No bootstrap, all original CSS. The taskers are all fake, so don't expect someone to actually show up at your house if you book one!</br></br>Built on <strong>Ruby on Rails</strong> and <strong>React/Redux</strong>.</br>Integrated with <strong>Google Places API</strong>.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
@@ -307,7 +307,7 @@
               <a target="_blank" href="https://brillantewang.github.io/teacherpay/">
                 <img class="img-fluid-large mb-5" src="img/teacherpay_screen.png" alt="TeacherPay">
               </a>
-              <p class="mb-5">Back when I was a math teacher, I heard that countries that paid their teachers more had better education systems. Was this true? Does this mean we should pay teachers more? To find out, I built <a target="_blank" href="https://brillantewang.github.io/teacherpay/">TeacherPay</a>, an interactive analysis of teacher salary to student outcomes across the world.</br></br>Built on vanilla JavaScript and D3.js.</p>
+              <p class="mb-5">Back when I was a math teacher, I heard that countries that paid their teachers more had better education systems. Was this true? Does this mean we should pay teachers more? To find out, I built <a target="_blank" href="https://brillantewang.github.io/teacherpay/">TeacherPay</a>, an interactive analysis of teacher salary to student outcomes across the world.</br></br>Built on <strong>vanilla JavaScript</strong> and <strong>D3.js</strong>.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
@@ -329,7 +329,7 @@
               <h2 class="text-secondary text-uppercase mb-0">Show Me Your Moves</h2>
               <hr class="star-dark mb-5">
               <a href="https://francislara.github.io/ShowMeYourMoves/" target="_blank"><img class="img-fluid-large mb-5" src="img/showmeyourmoves_screen2.png" alt=""></a>
-              <p class="mb-5">I've played Super Smash Bros ever since it came out on N64. Out of our love for the game, a couple friends and I built a mobile app that lets you find nearby players. We're not releasing it since we found another app out there that's really similar, but you can still check out our sweet <a href="https://francislara.github.io/ShowMeYourMoves/" target="_blank">demo page</a>.</br></br>Built on React Native and Ruby on Rails.</p>
+              <p class="mb-5">I've played Super Smash Bros ever since it came out on N64. Out of love for the game, a couple friends and I built a mobile app that lets you find nearby players. We're not releasing it since we found another app out there that's really similar, but you can still check out our sweet <a href="https://francislara.github.io/ShowMeYourMoves/" target="_blank">demo page</a>.</br></br>Built on <strong>React Native</strong> and <strong>Ruby on Rails</strong>.</br>Integrated with <strong>Google Maps API</strong>.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
