test formspree sample form

--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
                 <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
               </div>
             </form>
+            <form action="http://formspree.io/brillante.wang@gmail.com" method="POST"><input type="email" name="_replyto"><textarea   name="body"></textarea><input type="submit" value="Send"></form>
           </div>
         </div>
       </div>
