--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
+    <!-- <script src="js/jqBootstrapValidation.js"></script> -->
     <!-- <script src="js/contact_me.js"></script> -->
 
     <!-- Custom scripts for this template -->
